apps/argocd/repo-server-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
  namespace: argocd
spec:
  template:
    spec:
      # 1. Init Containers
      containers:
        - name: cmp-sops-plugin
          image: quay.io/argoproj/argocd:v3.4.5
          command: [/var/run/argocd/argocd-cmp-server]
          volumeMounts:
            - mountPath: /var/run/argocd
              name: var-files
            - mountPath: /home/argocd/cmp-server/plugins
              name: plugins
            - mountPath: /tmp
              name: tmp
            - mountPath: /custom-tools
              name: custom-tools
            - mountPath: /home/argocd/cmp-server/config/plugin.yaml
              name: cmp-sops-plugin
              subPath: plugin.yaml
            - mountPath: /var/run/secrets/sops
              name: sops-age-key

      # 3. Volumes Required by Sidecar & Init Containers
      volumes:
        - name: cmp-sops-plugin
          configMap:
            name: cmp-sops-plugin
        - name: custom-tools
          emptyDir: {}
        - name: plugins
          emptyDir: {}
        - name: var-files
          emptyDir: {}
        - name: tmp
          emptyDir: {}
        - name: sops-age-key
          secret:
            secretName: sops-age
